Changed the umlauts and the price mistakes

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
+    "csv": "^6.3.9",
     "express": "^4.19.2",
     "sqlite3": "^5.1.7"
   }
